syntax = "proto3";

package test_event;

// ==========================================================
// 测试用消息
// ==========================================================
message TestEchoACK
{
    string Content = 1;
}